Avoid padding and scrollbar for SQL in query tables

--- a/ui/temboardui/static/src/temboard.scss
+++ b/ui/temboardui/static/src/temboard.scss
@@ -304,6 +304,8 @@ table.table-query {
   .hljs {
     background: none;
     white-space: nowrap;
+    overflow-x: hidden;
+    padding: 0;
   }
 
   .detail {
